Organized some files, last commit to main

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,5 @@
-/IMAGESET_VANILLA/
-*.env
-/__pycache__/
-/renamer.py
-/filetotxt.py
-/GTTServers.json
+/Data/IMAGESET_VANILLA
+/Data/GTTServers.json
+/modules/__pycache__
+/.env
+/test.py
